# California-Urban-Water-Management-Economic-Tool

./: .gitignore  Dockerfile  LICENSE.md  README.md  create-cauwmet-model-executable.ps1  create-cauwmet-visualizer-executable.ps1  requirements.txt  requirements_forMap.txt
CaUWMET/: .gitignore  ModelOutputs_Best.xlsx  ModelOutputs_Optimal.xlsx  ModelOutputs_Zero.xlsx  OptimizeWMOs.py  OptimizeWMOsDemo.ipynb  OptimizerTesting.ipynb  Output_QAQC.xlsx  QAQCResults_Best.xlsx  QAQCResults_Optimal.xlsx  QAQCResults_Zero.xlsx  README.md  Results_QAQC.xlsx  Results_QAQC_CityofTracy_OptimizedPortfolio.xlsx  app.py  bokeh_graph.html  exportResults.py  functionTest.py  main.py  main.spec  mgtest.py  output - Copy.xlsx  output Tracy No WMOs.xlsx  output Tracy Optimized.xlsx  output.xlsx  output_CityOfTracy_NoWMO.xlsx  output_CoalingaNoWMOs.xlsx  output_CoalingaOptimizedWMOs.xlsx  output_TracyNoWMOs.xlsx  output_TracyOptimized.xlsx  pyproject.toml  readExcelTest.py  requirements.txt  runOptimizedWMOs.py  streamlit_executable_builder.py  streamlit_executable_builder.spec
CaUWMET/src/: DemandsUiState.py  GlobalUiState.py  Output_QAQC.xlsx  app.py  appsUtilities.py  colors.py  contractorDemands.py  demandsHelper.py  demandsManagementHelper.py  editableTable.py  extractCalsimIITimeseriesData.py  globalUtilities.py  mainModelLogic.py  multiapp.py  style.css  summaryPlots_Helper.py  suppliesHelper.py  systemOperationsHelper.py
CaUWMET/tests/: CaUWMET_CPED example for Python test.xlsx  CaUWMET_Tests.xlsx  inputDataLocationsForTesting.py  mgtest.py  test.py  test_contingentWMOs.py  (+5 more)
(+275 files in other folders)
