[tool.poetry]
name = "cauwmet"
version = "0.1.0"
description = "California Urban Water Management Economic Tool"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^1.5.3"
numpy = "^1.24.2"
plotly = "^5.13.1"
altair = "^4.2.2"
streamlit = "^1.20.0"
streamlit-aggrid = "^0.3.4.post3"
MultiApp = "^1.0"
sklearn = "^0.0.post1"
pymoo = "^0.6.0.1"
pyproj = "^3.5.0"
shapely = "^1.7.0"
openpyxl = "^3.1.2"
scikit-learn = "^1.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
