[tool.poetry]
name = "cauwmet"
version = "0.1.0"
description = "California Urban Water Management Economic Tool"
authors = ["Kensey Daly"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
bokeh = "^3.3.0"
numpy = "^1.26"
pandas = "^2.1.1"
plotly = "^5.17.0"
altair = "^5.1.2"
streamlit = "^1.27.2"
streamlit-aggrid = "^0.3.4.post3"
pymoo = "^0.6.0.1"
pyproj = "^3.6.1"
shapely = "^2.0.2"
openpyxl = "^3.1.2"
scikit-learn = "^1.3.1"
logging = "^0.4.9.6"
DateTime = "^5.2"
argparse = "^1.4.0"
ipykernel = "^6.25.2"
python-dateutil = "^2.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
